2004-12-18  Naba Kumar  <naba@gnome.org>

	* plugins/file-loader/plugin.c: Fixed loading bug.
	
	*plugins/debug-manager/plugin.c, plugins/debug-manager/plugin.h,
	plugins/devhelp/plugin.c, plugins/editor/plugin.c,
	plugins/file-manager/an_file_view.c, plugins/file-manager/plugin.c,
	plugins/gdb/plugin.c, src/shell.c, src/shell.h: Fixed memory leaks
	and corruptions. Fixed loading and unloading of plugins.
	
2004-12-17  Naba Kumar  <naba@gnome.org>
	
	* plugins/file-loader/Makefile.am,
	plugins/file-loader/plugin.c,
	plugins/project-manager/plugin.c: Fixed memory corruption
	and disposition codes. Added missing plugin.h in Makefile.am.

2004-12-16  Naba Kumar  <naba@gnome.org>

	* plugins/symbol-browser/an_symbol_view.c,
	plugins/symbol-browser/plugin.c: Fixed finalization and disposition
	codes. Fixed memory leaks and corruptions.

	* plugins/build-basic-autotools/build-basic-autotools.c
	plugins/editor/anjuta-docman.c,
	plugins/editor/text_editor.c,
	plugins/file-loader/plugin.c,
	plugins/file-manager/plugin.c,
	plugins/file-wizard/plugin.c,
	plugins/message-view/anjuta-msgman.c,
	plugins/message-view/anjuta-msgman.h,
	plugins/message-view/message-view.c,
	plugins/message-view/plugin.c,
	plugins/message-view/plugin.h,
	plugins/terminal/terminal.c: Fixed finalization and disposition codes.

	* src/about.c, src/about.h, src/action-callbacks.c,
	src/action-callbacks.h, src/anjuta-actions.h,
	src/anjuta-app.c, src/anjuta-app.h,
	src/anjuta-callbacks.c, src/anjuta-callbacks.h,
	src/anjuta.c, src/anjuta.h, src/getline.c, 
	src/main.c, src/main.cpp, src/shell.c, src/shell.h, 
	src/start-with.c, src/start-with.h: Fixed emacs modes.

	* src/layout.xml: Brought document manager in front.
	
2004-12-15  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-plugin.c: Fixed crash bug where watches were not
	properly removed.
	
	* libanjuta/plugins.c, libanjuta/plugins.h: Proper clean up on
	finalization. Added a method to unload all plugins and destroy them.
	Fixed memory leaks.
	